cmake_minimum_required(VERSION 2.8)
set (CMAKE_CXX_STANDARD 11)

project( Test )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories("${PROJECT_SOURCE_DIR}/headers")
file(GLOB SOURCES "${PROJECT_SOURCE_DIR}/sources/*.cpp")
add_executable( Test main.cpp ${SOURCES})
target_link_libraries( Test ${OpenCV_LIBS} )
